# nlp1-lab2

./: .gitignore  README.md  lab02.ipynb  pyproject.toml  requirements.txt
lab02/: README.md  lab02.ipynb  spacy.ipynb
lab03/: README.md  lab03.html  lab03.ipynb  logistic_regression_pytorch.ipynb
lab04/: README.md  fill_your_own_glove.html  fill_your_own_glove.ipynb  lab04.html  lab04.ipynb
lab05/: 01_code_your_own_RNN.ipynb  02_using_pyTorch_RNNs.ipynb  README.md  best_model.pt  best_model_bilstm.pt  best_model_lstm.pt  best_model_torch.pt
lab06/: README.md  lab06.html  lab06.ipynb
lab07/: README.md  lab07.ipynb
lab08/: README.md  extracted_tweets.csv  extracted_tweets2.csv  lab08.ipynb
lab08/annotations/: FIDEL.csv  FISCH.csv  RIPOLL.csv
